ใส่ปุ่มแชร์จัดหน้าแล้ว- ปุ่มแชร์เหลือใส่ลิ้ง // ใส่แบล็คกราว

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.1",
-    "@angular/cdk": "^7.2.1",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-brands-svg-icons": "^5.7.1",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "ag-grid-angular": "^20.0.0",
     "ag-grid-community": "^20.0.0",
     "bootstrap": "^3.4.0",
