--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "../node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [],
             "assets": [
