--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "ag-grid-angular": "^20.0.0",
     "ag-grid-community": "^20.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.3.3",
